@@ -1,4 +1,6 @@
 -------------------------------------------------
+GearSwap 0.814 - Fixed the equipment table, which was being unreliable.
+-------------------------------------------------
 GearSwap 0.813 - Fixed issues with /pet. Meddled with triggering interruption again. Potentially re-created the Paralysis issue in the process.
 -------------------------------------------------
 GearSwap 0.812 - Fixed Interruption handling for action messages that show the player as the target regardless the real target.
